# graphion

./: .gitignore  README.md  pyproject.toml  setup.cfg
graphion/: core.py
tests/: test_core.py
