[metadata]
name=graphion
version = attr: graphion.__version__
author=Mike Babst
author_email=MikesRND@protonmail.com
description=Structured programming for DSP/ML/AI.
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/MikesRND/graphion
license=Apache 2.0
license_files = LICENSE
platforms = Linux, Windows, Mac
classifiers=
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Signal Processing
    Topic :: Scientific/Engineering :: Machine Learning
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.12
keywords=
    Signal Processing
    Artifical Intelligence
    Machine Learning

[options]
include_package_data = True
packages = find:
python_requires = >=3.12
install_requires =
    atom
    click
    numpy

[options.extras_require]
dev = 
    pytest
    pytest-cov
    tox
    mypy
    mypy-extensions
    black
    flake8
    sphinx
    sphinx-rtd-theme

[options.packages.find]
exclude =
    docs*

# [options.entry_points]
# console_scripts =
#     chained = graphion.cli:main

[flake8]
exclude = 
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    .venv*
ignore = E203, E266, E501, W503, E731
max-line-length = 120
max-complexity = 19
select = B,C,E,F,W,T4,B9